# caddy-log-to-mysql

./: Cargo.toml  README.md  sqlx-data.json
.github/workflows/: ci.yml
docker/: .gitignore  Dockerfile  run.sh
migrations/: 20211027070841_init.sql
src/: main.rs
