[package]
name = "caddy-log-to-mysql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1.7.0", features = ["serde-1"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "offline", "mysql", "chrono" ] }
blake3 = "1.1.0"
chrono = "0.4"
indicatif = "0.16.2"
